# api-svatky

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  uwsgi.ini  uwsgi.service
app/: __init__.py  config.py  config_swag.py  db.py  logger.py  routes.py  schema.sql  services.py  utils.py
tests/: conftest.py  test_requests.py  test_utils.py
